﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

------------------------------------------------------------------------------------------------------------------------
1.1.19
------------------------------------------------------------------------------------------------------------------------

2014-12-11: Laurent Declercq
	RELEASE i-MSCP 1.1.19

CONFIGS
	Added: Sysctl configuration file for secondary IP promoting ( /etc/sysctl.d/imscp.conf file )
	Changed: SPF - Email treating level is now set to softfail instead of fail ( bind9 )
	Fixed: Access to error documents is forbiden in some contexts ( Apache )
	Fixed: A TLS fatal alert has been received - Wrong cipher suite ( ProFTPD )
	Fixed: Domain aliases and subdomains can't follow symlinks from customer homedir
	Fixed: Missing NoSessionReuseRequired parameter ( ProFTPD )

DAEMON
	Fixed: Network manager must not remove SSH connection IP

ENGINE
	Fixed: Fcgi wrapper is not created in some contexts ( apache_fcgid )
	Fixed: Pool configuration file is not created in some contexts ( apache_php_fpm )

GUI
	Added: Events for mail catch-all
	Changed: All network interfaces are now selectable, even if they are not up
	Fixed: Allow the message_timeout event to be triggered for elements which are out of the .body container ( layout )
	Fixed: Clear opcode cache when needed ( Opcache, APC )
	Fixed: CSS loading order
	Replaced: i-MSCP jQuery tooltip plugin by jQuery UI tooltip widget

i18n
	Added: i18n_getJsTranslations() function which allow to translate JS scripts
	Added: onGetJsTranslations event which allows the plugins to add their own JS translations
	Added: New languages: Breton, Czech, Icelandic and Georgian ( Requested languages )