@@ -108,7 +108,7 @@ Group                      nogroup
 {SSL}  TLSEngine                on
 {SSL}  TLSRequired              off
 {SSL}  TLSLog                   /var/log/proftpd/ftp_ssl.log
-{SSL}  TLSProtocol              TLSv1 TLSv1.1 TLSv1.2
+{SSL}  TLSProtocol              TLSv1
 {SSL}  TLSCipherSuite           ALL:!aNULL:!ADH:!eNULL:!LOW:!EXP:RC4+RSA:+HIGH:+MEDIUM
 {SSL}  TLSOptions               {TLSOPTIONS}
 {SSL}  TLSRSACertificateFile    {CONF_DIR}/{CERTIFICATE}.pem
