@@ -4,6 +4,12 @@
 Git 1.1.x
 ------------------------------------------------------------------------------------------------------------------------
 
+CONFIGS
+	Fixed: Unable to start the Ftp server - unknown protocol: 'TLSv1.1' ( ProFTPD )
+
+ENGINE
+	Fixed: Unable to do any operation on the user web directory - ( immutable bit )
+
 ------------------------------------------------------------------------------------------------------------------------
 1.1.19
 ------------------------------------------------------------------------------------------------------------------------
